feat: цвет списка на общей странице, тень карточки в тон цвету, значок общего списка дел, фраза под названием в шапке, меню по центру шапки, убран счётчик карточек, исправлено сжатие шапки и подвала к центру;
